# ckg-connector

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
ckg_connector/: main.py
ckg_connector/dataset/: dataset.py  synthetic_dataset.py
ckg_connector/mapping/: icd_to_doid.py  mapper.py
ckg_connector/setup/: populate_data_folder.py
ckg_connector/transform/: icd_to_doid.py  manual.py  ops_to_snomed.py  transformer.py  utils.py
data/mappings/: manual_template.csv
tests/: expected_clinical_data.csv  expected_transform_analytics.csv  test_main.py
tests/dataset/: expected_binary_coded_icd_codes.csv  expected_binary_coded_ops_codes.csv  test_synthetic_dataset.py
tests/mapping/: test_icd_to_doid.py
tests/setup/: test_populate_data_folder.py
tests/test_data/: test_dataset.xlsx
tests/transform/: test_icd_to_doid.py  test_manual.py  test_ops_to_snomed.py  test_utils.py
