[tool.poetry]
name = "ckg-connector"
version = "0.1.0"
description = "Transform clinical data files into files for insertion into CKG"
authors = ["Nils Krehl <nils.krehl@stud.uni-heidelberg.de>"]
readme = "README.md"
packages = [{ include = "ckg_connector" }]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.4"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
jupyterlab = "^3.5.0"
openpyxl = "^3.0.10"
obonet = "^0.3.1"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
pre-commit = "^2.20.0"
coverage = "^7.0.5"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
